<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272727"
    tools:context="ap1.testbox.sooryagangarajk.com.workshopcalc.MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="361dp"
        android:layout_height="85dp"
        android:text="@string/_00000"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btneq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="#373737"
        android:text="@string/eql"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintLeft_toRightOf="@+id/btnz"
        app:layout_constraintRight_toLeftOf="@+id/btndiv"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/_6"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn3"
        app:layout_constraintLeft_toRightOf="@+id/btn5"
        app:layout_constraintRight_toLeftOf="@+id/btnmin"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <Button
        android:id="@+id/btnmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/f"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btnmult"
        app:layout_constraintLeft_toRightOf="@+id/btn6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnpls" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/_5"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintLeft_toRightOf="@+id/btn4"
        app:layout_constraintRight_toLeftOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/_4"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/_9"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintLeft_toRightOf="@+id/btn8"
        app:layout_constraintRight_toLeftOf="@+id/btnpls"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnpls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/plus"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btnmin"
        app:layout_constraintLeft_toRightOf="@+id/btn9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/_8"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintLeft_toRightOf="@+id/btn7"
        app:layout_constraintRight_toLeftOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/_7"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/_3"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btneq"
        app:layout_constraintLeft_toRightOf="@+id/btn2"
        app:layout_constraintRight_toLeftOf="@+id/btnmult"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btnmult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/star"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btndiv"
        app:layout_constraintLeft_toRightOf="@+id/btn3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmin" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/_2"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btnz"
        app:layout_constraintLeft_toRightOf="@+id/btn1"
        app:layout_constraintRight_toLeftOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/_1"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btnzz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btnz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/_0"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnzz"
        app:layout_constraintRight_toLeftOf="@+id/btneq"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btnzz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/ac"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnz"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373737"
        android:text="@string/m"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btneq"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmult" />
</android.support.constraint.ConstraintLayout>
